<resources>

    <string name="default_web_client_id">239100579519-4fdgi2d339cuor9b0aslcm7p0sba64ei.apps.googleusercontent.com</string>

    <string name="app_name">Swift Cart</string>
    <string name="categorytitle">Category</string>
    <string name="quantity">0</string>
    <string name="buy">Buy</string>
    <string name="item_price">Item Price</string>
    <string name="item_title">Item title</string>
    <string name="home_appliances">Home Appliances</string>
    <string name="cartegories">Cartegories</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="smartphones">Smartphones</string>
    <string name="laptop">Laptop</string>
    <string name="games">Games</string>
    <string name="gaming_consoles">Gaming Consoles</string>
    <string name="specials_for_you">Specials For You</string>
    <string name="categories">Categories</string>
    <string name="popular_products">Popular Products</string>
    <string name="sign_up">Sign Up</string>
    <string name="dont_have_an_account">Dont Have An Account?</string>
    <string name="forget_password">Forget Password?</string>
    <string name="enter_password">Enter Password…</string>
    <string name="password">Password</string>
    <string name="enter_email">Enter Email…</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign In</string>
    <string name="youremail_email_com">youremail@email.com</string>
    <string name="your_name">Your Name</string>
    <string name="see_all">See All</string>
    <string name="enter_username">Enter Username…</string>
    <string name="username">Username</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="orders">Orders</string>
    <string name="account">Account</string>
    <string name="search_product">Search product…</string>
    <string name="account_fragment">account fragment</string>
    <string name="orders_fragment">orders fragment</string>
    <string name="picked_for_you">Picked For You</string>
    <string name="cashback_20">Cashback 20%</string>
    <string name="a_summer_suprise">A summer Suprise</string>
    <string name="check_out">Check Out</string>
    <string name="search_cart">Search Cart...</string>
    <string name="total">Total</string>
    <string name="my_cart">My Cart</string>
    <string name="my_orders">My Orders</string>
    <string name="my_favorites">My Favorites</string>
    <string name="my_profile">My Profile</string>
    <string name="my_account">My Account</string>


</resources>