<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/backgroundColor">

    <TextView
        android:id="@+id/signintv"
        android:text="@string/sign_in"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="30sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        />





    <TextView
        android:id="@+id/emailtv"
        android:layout_below="@id/signintv"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"/>

    <EditText
        android:id="@+id/emailet"
        android:hint="@string/enter_email"
        android:layout_below="@id/emailtv"
        android:inputType="textEmailAddress"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:id="@+id/passwordtv"
        android:layout_below="@id/emailet"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"/>

    <EditText
        android:id="@+id/passwordet"
        android:layout_below="@id/passwordtv"
        android:textSize="25sp"
        android:textStyle="bold"
        android:inputType="textPassword"
        android:hint="@string/enter_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:id="@+id/forgetpasswordtv"
        android:layout_below="@id/passwordet"
        android:text="@string/forget_password"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"/>




    <Button
        android:id="@+id/signinbtn"
        android:layout_below="@id/forgetpasswordtv"
        android:text="sign up"
        android:textAllCaps="true"
        android:background="@drawable/button_style"
        android:textSize="27sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:id="@+id/donthaveanaccounttv"
        android:layout_below="@id/signinbtn"
        android:text="@string/dont_have_an_account"
        android:textSize="15sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:id="@+id/signuptv"
        android:text="@string/sign_up"
        android:layout_below="@id/signinbtn"
        android:layout_alignEnd="@id/donthaveanaccounttv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="15dp"/>


    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@id/donthaveanaccounttv"

        />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/facebook_login_button"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_below="@id/google_sign_in"/>



</RelativeLayout>