<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/backgroundColor"
    tools:context=".fragments.CartFragment">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

   <View
       android:id="@+id/view"
       android:layout_width="match_parent"
       android:layout_height="75dp"
       android:background="@drawable/view"/>

   <TextView
       android:id="@+id/mycart"
       android:text="@string/my_cart"
       android:textColor="@color/white"
       android:textSize="30sp"
       android:layout_marginTop="20dp"
       android:layout_marginStart="140dp"
       android:textStyle="bold|normal"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"/>

   <ImageView
       android:id="@+id/backbtn"
       android:layout_width="30dp"
       android:layout_height="30dp"
       android:layout_marginTop="20dp"
       android:layout_marginStart="20dp"
       />



   <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/recyclerview"
       android:layout_below="@id/view"
       android:layout_above="@id/line"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginStart="10dp"
       android:layout_marginEnd="10dp"
       android:layout_marginTop="10dp"/>

   <ImageView
       android:id="@+id/cartisemptyimage"
       android:layout_below="@id/view"
       android:layout_marginTop="200dp"
       android:layout_marginStart="40dp"
       android:visibility="gone"
       android:layout_width="300dp"
       android:layout_height="300dp"/>

   <View
       android:id="@+id/line"
       android:layout_above="@id/totaltext"
       android:layout_width="match_parent"
       android:layout_height="2dp"
       android:background="@color/grey"/>

   <TextView
       android:id="@+id/totaltext"
       android:textStyle="bold|normal"
      android:text="@string/total"
       android:textSize="25sp"
       android:textColor="@color/black"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginEnd="200dp"
       android:layout_marginBottom="20dp"
       android:layout_marginStart="10dp"
       android:layout_marginTop="10dp"
       android:layout_above="@id/checkoutbtn"/>


   <TextView
       android:id="@+id/totalnumber"
       android:layout_toEndOf="@id/totaltext"
       android:text="$12,000.99"
       android:textStyle="bold|normal"
       android:textSize="20sp"
       android:textColor="@color/my_light_accent_color"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginBottom="20dp"
       android:layout_marginStart="10dp"
       android:layout_marginEnd="10dp"
       android:layout_marginTop="10dp"
       android:layout_above="@id/checkoutbtn"/>

   <Button
       android:id="@+id/checkoutbtn"
       android:layout_marginBottom="10dp"
       android:layout_marginStart="10dp"
       android:layout_marginEnd="10dp"
       android:layout_marginTop="10dp"
       android:text="@string/check_out"
       android:textColor="@color/white"
       android:textStyle="bold|normal"
       android:textSize="18sp"
       android:layout_alignParentBottom="true"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:background="@drawable/secondary_btn_style"/>
</RelativeLayout>



</FrameLayout>