<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.HomeFragment"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="@drawable/view"/>

        <EditText
            android:padding="10dp"
            android:id="@+id/searchview"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/search_1"
            android:background="@drawable/search_custom"
            android:hint="@string/search_product"
            />

        <androidx.cardview.widget.CardView
            android:id="@+id/favoritecd"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_searchview"
            app:cardCornerRadius="15dp"
            android:layout_toEndOf="@id/searchview">

            <ImageView
                android:id="@+id/favorites"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="12dp"
                />

        </androidx.cardview.widget.CardView>

        <ScrollView
            android:id="@+id/scrollview"
            android:layout_below="@id/searchview"
            android:layout_width="match_parent"
            android:layout_marginTop="12dp"
            android:layout_height="match_parent"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <androidx.cardview.widget.CardView
                    android:id="@+id/salesBanner"
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:layout_margin="7dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="7dp"
                    android:layout_marginStart="7dp"
                    android:elevation="10dp"
                    app:cardCornerRadius="15dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="10dp"
                        style="@style/acccentColor" >

                        <TextView
                            android:id="@+id/summersupprise"
                            android:layout_marginTop="20dp"
                            android:text="@string/a_summer_suprise"
                            android:textColor="@color/white"
                            android:textStyle="normal|bold"
                            android:textSize="15sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:id="@+id/cashback"
                            android:layout_below="@id/summersupprise"
                            android:text="@string/cashback_20"
                            android:textColor="@color/white"
                            android:textStyle="normal|bold"
                            android:textSize="35sp"
                            android:layout_marginEnd="20dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <ImageView
                            android:id="@+id/cashbackimage"
                            android:layout_marginTop="10dp"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_toEndOf="@id/cashback"/>
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/categoriesRecycleView"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_below="@id/salesBanner"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp" />


                <LinearLayout
                    android:id="@+id/popularproductsLL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/categoriesRecycleView"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/popularproducttv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/popular_products"
                        android:textAlignment="viewStart"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        style="@style/textColor" />

                    <TextView
                        android:id="@+id/seeallforpopularproductstv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/see_all"
                        android:textAlignment="viewEnd"
                        android:textColor="@color/my_light_accent_color"
                        android:textSize="13sp"
                        style="@style/textColor" />
                </LinearLayout>


                <FrameLayout
                    android:id="@+id/popularproductframelayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/popularproductsLL"
                    style="@style/backgroundColor" />


                <LinearLayout
                    android:id="@+id/pickedforyouproductsLL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/popularproductframelayout"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/recomendedproducttv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/picked_for_you"
                        android:textAlignment="viewStart"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        style="@style/textColor" />

                    <TextView
                        android:id="@+id/seeallforpickedforyou"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/see_all"
                        android:textAlignment="viewEnd"
                        android:textColor="@color/my_light_accent_color"
                        android:textSize="13sp"
                        style="@style/textColor" />

                </LinearLayout>

                <FrameLayout
                    android:id="@+id/pickedforyouproductframelayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/pickedforyouproductsLL"
                    style="@style/backgroundColor" />

            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>

</FrameLayout>